# ratatap

./: Cargo.toml  README.md
src/: finger_map.rs  main.rs  stats.rs
src/modes/: finger_drill.rs  mod.rs  normal.rs  weak_letter.rs
src/ui/: charts.rs  dialogs.rs  keyboard.rs  mod.rs  theme.rs
